--- a/local-events/src/main/resources/templates/fragments.html
+++ b/local-events/src/main/resources/templates/fragments.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Local Events</title>
 <!--    <script th:src="@{/script.js}"></script>-->
-<!--    <link th:href="@{/styles.css}" rel="stylesheet">-->
+    <link th:href="@{/styles.css}" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
@@ -17,6 +17,8 @@
         <li class="nav-item"><a class="nav-link" href="/events">All Events</a></li>
         <li class="nav-item"><a class="nav-link" href="/events/create">Create Event</a></li>
         <li class="nav-item"><a class="nav-link" href="/events/delete">Delete Event</a></li>
+        <li class="nav-item"><a class="nav-link" href="/eventCategories">All Categories</a></li>
+        <li class="nav-item"><a class="nav-link" href="/eventCategories/create">Create Category</a></li>
     </ul>
 </nav>
 
