--- a/local-events/src/main/resources/templates/events/index.html
+++ b/local-events/src/main/resources/templates/events/index.html
@@ -12,7 +12,6 @@
         <th>Name</th>
         <th>Description</th>
         <th>Contact Email</th>
-        <!-- <th>Type</th> -->	<!-- 14.2.2.6. Use Enum Properties to Display Information -->
         <th>Category</th>
     </tr>
     </thead>
@@ -21,7 +20,7 @@
         <td th:text="${event.name}"></td>
         <td th:text="${event.description}"></td>
         <td th:text="${event.contactEmail}"></td>
-        <td th:text="${event.eventCategory.name}"></td>	<!-- 18.2.4.1. Replacing EventType With EventCategory -->
+        <td th:text="${event.eventCategory.name}"></td>
     </tr>
 </table>
 
