--- a/local-events/src/main/resources/templates/events/create.html
+++ b/local-events/src/main/resources/templates/events/create.html
@@ -18,17 +18,16 @@
     </div>
     <div class="form-group">
         <label>Description
-            <input th:field="${event.description}" class="form-control">
+            <input th:field="${event.eventDetails.description}" class="form-control">
         </label>
-        <p class="error" th:errors="${event.description}"></p>
+        <p class="error" th:errors="${event.eventDetails.description}"></p>
     </div>
     <div class="form-group">
         <label>Contact Email
-            <input th:field="${event.contactEmail}" class="form-control">
+            <input th:field="${event.eventDetails.contactEmail}" class="form-control">
         </label>
-        <p class="error" th:errors="${event.contactEmail}"></p>
+        <p class="error" th:errors="${event.eventDetails.contactEmail}"></p>
     </div>
-    <!-- 18.2.4.1. Replacing EventType With EventCategory -->
     <div class="form-group">
         <label>Category
             <select th:field="${event.eventCategory}">
@@ -41,19 +40,6 @@
         <p class="error" th:errors="${event.eventCategory}"></p>
     </div>
 
-    <!-- 14.2.2.5 - Using enum value in select HTML element -->
-    <!--
-    <div class="form-group">
-        <label>Type
-        <select th:field="${event.type}">
-           <option th:each="type : ${types}"
-                    th:value="${type}"
-                    th:text="${type.displayName}">
-           </option>
-        </select>
-        </label>
-     </div>
-      -->
     <div class="form-group">
         <input type="submit" value="Create Event" class="btn btn-success">
     </div>
