--- a/local-events/src/main/resources/templates/events/create.html
+++ b/local-events/src/main/resources/templates/events/create.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<body>
+<body class="container">
 
 <header th:replace="fragments :: header"></header>
 
-<!-- 13.3.3.2 - Displays the error message if provided from the server -->
-<!-- <p th:text="${errorMsg}" style="color:red;"></p> -->
-
-<!-- 13.4.2.2 - Using th:errors -->
-<form method="post" action="/events/create">
+<form method="post">
     <div class="form-group">
         <label>Name
             <input th:field="${event.name}" class="form-control">
@@ -33,15 +29,14 @@
             <select th:field="${event.eventCategory}">
                 <option th:each="eventCategory : ${categories}"
                         th:value="${eventCategory.id}"
-                        th:text="${eventCategory.name}">
-                </option>
+                        th:text="${eventCategory.name}"
+                ></option>
             </select>
+            <p class="error" th:errors="${event.eventCategory}"></p>
         </label>
-        <p class="error" th:errors="${event.eventCategory}"></p>
     </div>
-
     <div class="form-group">
-        <input type="submit" value="Create Event" class="btn btn-success">
+        <input type="submit" value="Create" class="btn btn-success">
     </div>
 </form>
 
